Bug 333681: Switching profiles opens chatzilla.  r/sr=neil